k8s/local/aztec-sandbox-node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aztec-sandbox-node
  name: aztec-sandbox-node
  namespace: chicmoz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aztec-sandbox-node
  strategy: {}
  template:
    metadata:
      labels:
        app: aztec-sandbox-node
    spec:
      containers:
        - image: aztecprotocol/aztec:4.1.1
          name: aztec-sandbox-node
          resources:
            limits:
              memory: 4Gi
              cpu: 2000m
          command: ["node"]
          args:
            - ./aztec/dest/bin/index.js
            - start
            - --local-network
          ports:
            - name: pxe-port
              containerPort: 8081
              protocol: TCP
status: {}
